@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.93 2009-01-14 19:56:55 nicm Exp $
+# $Id: Makefile,v 1.94 2009-01-15 19:27:31 nicm Exp $
 
 .SUFFIXES: .c .o .y .h
 .PHONY: clean update-index.html upload-index.html
@@ -39,8 +39,9 @@ SRCS= tmux.c server.c server-msg.c server-fn.c buffer.c buffer-poll.c status.c \
       cmd-clock-mode.c cmd-lock-server.c cmd-set-password.c \
       cmd-save-buffer.c cmd-select-pane.c cmd-split-window.c \
       cmd-resize-pane-up.c cmd-resize-pane-down.c cmd-kill-pane.c \
-      cmd-up-pane.c cmd-down-pane.c \
+      cmd-up-pane.c cmd-down-pane.c cmd-choose-window.c cmd-choose-session.c \
       window-clock.c window-scroll.c window-more.c window-copy.c \
+      window-choose.c \
       options.c options-cmd.c paste.c colour.c utf8.c clock.c \
       tty.c tty-term.c tty-keys.c tty-write.c
 
