@@ -1,4 +1,4 @@
-/* $Id: cmd.c,v 1.78 2009-01-14 19:56:55 nicm Exp $ */
+/* $Id: cmd.c,v 1.79 2009-01-15 19:27:31 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -28,6 +28,8 @@
 const struct cmd_entry *cmd_table[] = {
 	&cmd_attach_session_entry,
 	&cmd_bind_key_entry,
+	&cmd_choose_session_entry,
+	&cmd_choose_window_entry,
 	&cmd_clock_mode_entry,
 	&cmd_command_prompt_entry,
 	&cmd_copy_mode_entry,
