@@ -1,3 +1,8 @@
+15 January 2009
+
+* Two new commands, choose-window and choose-session which work only when bound
+  to a key and allow the window or session to be selected from a list.
+
 14 January 2009
 
 * Rework the prefix-time stuff. The option is now called repeat-time and
@@ -923,7 +928,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.210 2009-01-14 23:00:18 nicm Exp $
+$Id: CHANGES,v 1.211 2009-01-15 19:27:31 nicm Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB ms
